Added routes for admin into routes.rb
It's required to set routes for administration pages.
And a typo correction in "login.html.erb".

--- a/app/views/admin/login.html.erb
+++ b/app/views/admin/login.html.erb
@@ -11,7 +11,7 @@
 				<%= password_field_tag :password, params[:password]%>
 			</p>
 			<p>
-				<%= submit_tqg "Log In" %>
+				<%= submit_tag "Log In" %>
 			</p>
 		<% end %>
 	</fieldset>
