Interconnection between Admin pages via link_to
Adminページ相互の行き来が必要なので、リンクを置いた。

--- a/app/views/admin/list_postings.html.erb
+++ b/app/views/admin/list_postings.html.erb
@@ -1,3 +1,4 @@
+<p align="right"><%= link_to "Change Password", :action => "change_passwd" -%></p>
 <h1>Admin#list_postings</h1>
 <ul>
 	<% for posting in @all_postings %>
