--- a/app/views/admin/change_passwd.rhtml
+++ b/app/views/admin/change_passwd.rhtml
@@ -1,3 +1,4 @@
+<p align="right"><%= link_to "List Postings", :action => "list_postings" -%></p>
 <div class="CTS-form">
 	<%= error_messages_for 'admin' %>
 	
