Integration test for Admin workflow
Adminについてもintegration testが必要。
なお、テストの都合上、list_postings.html.erbの中の
liタグにid attributeを設定した。

--- a/app/views/admin/list_postings.html.erb
+++ b/app/views/admin/list_postings.html.erb
@@ -2,7 +2,7 @@
 <h1>Admin#list_postings</h1>
 <ul>
 	<% for posting in @all_postings %>
-		<li><%= link_to "[X]", { # link_to options
+		<li id = <%= posting.id -%> ><%= link_to "[X]", { # link_to options
 					:controller => 'admin',
 					:action => 'delete_posting',
 					:id => posting
