Encryption of user delete keys
user delete keyをplain textで保存していたが、
それでは第三者が読み出した場合に、投稿を削除できてしまう。
暗号化をかませれば、暗号化されたキーを読み出せても、
暗号化前のキーを割り出すことは困難と成るので一安心である。

--- a/app/views/article/article_out.rhtml
+++ b/app/views/article/article_out.rhtml
@@ -21,10 +21,10 @@
 					</td></tr>
 					<tr valign = "middle">
 						<th>Handle</th> 
-						<td><%= h handle_read(@posting.author) -%></td>
+						<td><%= handle_read(@posting.author) -%></td>
 					</tr>
 					<tr valign = "middle">
-						<th>Title</th><td><%= h title_read(@posting.title) -%></td>
+						<th>Title</th><td><%= title_read(@posting.title) -%></td>
 					</tr>
 				</tr>
 			</table>
