--- a/app/views/article/_del_button.rhtml
+++ b/app/views/article/_del_button.rhtml
@@ -1,7 +1,7 @@
 <%if model.isLive %>
 <%	form_tag(del_post_url, :target => 'Threads') { %>
 		<%= hidden_field_tag("to_del", model.id.to_s) %>
-		削除キー<%= password_field_tag("delkey", "", :size => 8) %>
+		削除キー<%= password_field_tag("delkey_entered", "", :size => 8) %>
 		<%= submit_tag("Del", :name => "Del") %>
 <%	} %>
 <% else %>
